k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: ghcr.io/henintsoaraj/lava-sofina-web:f18c1c73aa066c0abba5b1862830d082a9cc39ca
          ports:
            - containerPort: 80
