k8s/icecast-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: icecast
spec:
  type: NodePort
  selector:
    app: icecast
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30800
