k8s/liquidsoap-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: liquidsoap
spec:
  selector:
    app: liquidsoap
  ports:
    - port: 1234
      targetPort: 1234
